# mohashim

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  WORK_LOG.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.claude/: config.json
.github/workflows/: release.yml
.sisyphus/plans/: noise-3-tier.md
context/: README.md  glossary.md
context/character/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/grass/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/lifecycle/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/score/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/timer/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/todo/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
context/tray/: PROJECTS.md  README.md  architecture.md  glossary.md  status.md
docs/: fonts.md
requirements/: v2-mvp-policy.md  v2-확장기능.md  기능mvp.md
scripts/: app-icon-gen.mjs  check-privacy.sh  installer-art-gen.mjs  tray-gen.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  input.rs  lib.rs  logger.rs  main.rs  permissions.rs  power.rs  storage.rs  timer.rs  tray.rs
src-tauri/src/economy/: mod.rs  reward.rs  state.rs
src-tauri/src/insight/: buckets.rs  mod.rs  templates.rs
src-tauri/src/mailbox/: mod.rs  notifier.rs  state.rs
src-tauri/src/score/: ema.rs  mod.rs  noise.rs  phase.rs  shared.rs  state.rs  work.rs
src-tauri/src/shop/: catalog.rs  mod.rs  state.rs
src-tauri/tests/: score_integration.rs
src/components/: PopupTail.tsx  Potato.tsx  SpeechBubble.tsx
src/components/__tests__/: PopupTail.test.tsx  Potato.test.tsx  SpeechBubble.test.tsx
src/components/popup/: BottomTabBar.tsx  ContributionGraph.tsx  DayDetailPanel.tsx  DiscardChangesModal.tsx  DiscardModal.tsx  DurationsEditScreen.tsx  DurationsEditorScreen.tsx  EmptyChip.tsx  FlatTag.tsx  FocusStartButton.tsx  GrassHelpModal.tsx  GrassTab.tsx  IdleScreen.tsx  ItemOverlay.tsx  LocationEditorScreen.tsx  MailboxScreen.tsx  MainHeader.tsx  MainScreen.tsx  MetaChip.tsx  ModeChip.tsx  NoiseMeter.tsx  OnboardingScreen.tsx  PinGuideModal.tsx  PomodoroCard.tsx  PomodoroRunning.tsx  ResetConfirmModal.tsx  ScoreHelpModal.tsx  SettingsScreen.tsx  ShareCard.tsx  SharePreviewModal.tsx  ShopTab.tsx  TagListEditor.tsx  TagPicker.tsx  TimerDetailScreen.tsx  Toast.tsx  TodoInput.tsx  TodoItem.tsx  (+3 more)
src/lib/: economy.ts  grass.ts  idleChip.ts  mailbox.ts  permissions.ts  phrases.ts  score.ts  shop.ts  shopCatalog.ts  storage.ts  timer.ts  toast.ts  todos.ts  trayPopup.ts  updater.ts  usePhrase.ts
(+28 files in other folders)
