[package]
name = "mohashim"
version = "1.0.1"
description = "모하심 — 키보드/마우스 + 마이크 dB 하이브리드 집중도 측정 데스크탑 앱"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mohashim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"
cpal = "0.15"
rdev = "0.5"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSDate", "NSDictionary"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
core-foundation = "0.10"
block2 = "0.6"

[dev-dependencies]
serial_test = "3"
